k8s/todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
  labels:
    app: todo-app
    env: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-pod
      env: dev
  template:
    metadata:
      name: todo-pod
      labels:
        app: todo-pod
        env: dev
    spec:
      containers:
        - name: todo-service
          image: migpalg/todo-service:v0.5.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-pod
    env: dev
  ports:
    - port: 3000
