k8s/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  labels:
    app: todo-app
    env: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users-pod
      env: dev
  template:
    metadata:
      name: users-pod
      labels:
        app: users-pod
        env: dev
    spec:
      containers:
        - name: users-service
          image: migpalg/users-service:v0.1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users-pod
    env: dev
  ports:
    - port: 3000
