k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /todos
            backend:
              service:
                name: todo-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /users
            backend:
              service:
                name: users-service
                port:
                  number: 3000
